add combat options
